# django-push-notifications-project

./: README.md
django-channels-push-notification/: pyproject.toml
django-channels-push-notification-with-celery-worker/: Dockerfile  docker-compose.yml  pyproject.toml
django-channels-push-notification-with-celery-worker/core/: celerybeat-schedule  db.sqlite3
django-channels-push-notification/core/: db.sqlite3
django-channels-push-notification/core/core/: asgi.py  settings.py  urls.py
django-channels-push-notification/core/notification/: consumers.py
django-channels-push-notification/core/notification/migrations/: 0001_initial.py
