[tool.poetry]
name = "django-channels-push-notification"
version = "0.1.0"
description = ""
authors = ["Chanov Sergey <s.c.chanov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
channels = "^4.0.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
